# libeventco

./: .cirrus.yml  .gitignore  .travis.yml  CMakeLists.txt  Makefile.am  Makefile.in  configure  configure.ac
.github/workflows/: test.yml
bench/: Makefile.am  Makefile.in  bench_yield.c  benchutils.c  benchutils.h
include/: evco.h  eventco.h
src/: Makefile.am  Makefile.in  evco.c  eventco.c
tests/: Makefile.am  Makefile.in  test.sh  test_cond.c  test_echo.c  test_proxy.c
